--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -13,7 +13,8 @@
     <div class="form-group">
         <label for='category' for="">Category</label>
         <select id='category' type="text" class="form-control">
-            <option>Category1</option>
+            <option>Select a Category</option>
+            <option *ngFor='let category of (categories$|async)' [value]="category.$key">{{category.name}}</option>
         </select>
     </div>
     <div class="form-group">
