--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -14,7 +14,9 @@
         <label for='category' for="">Category</label>
         <select id='category' type="text" class="form-control">
             <option>Select a Category</option>
-            <option *ngFor='let category of (categories$|async)' [value]="category.$key">{{category.name}}</option>
+            <option *ngFor="let c of categories$ | async" [value]="c.key">
+                {{ c.name }}
+            </option>
         </select>
     </div>
     <div class="form-group">
