--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,18 +1,19 @@
-<form>
+<form #f="ngForm" (ngSubmit)="save(f.value)">
     <div class="form-group">
         <label for='title' for="">Title</label>
-        <input id='title' type="text" class="form-control">
+        <input #title="ngModel" ngModel name="title" id='title' type="text" class="form-control" required>
     </div>
+    <div *ngIf="title.touched && title.invalid" class="alert alert-danger"> Title is Required.</div>
     <div class="form-group">
         <label for='price' for="">Price</label>
 
-        <input id='price' type="number" class="form-control">
+        <input ngModel name="price" id='price' type="number" class="form-control">
 
 
     </div>
     <div class="form-group">
         <label for='category' for="">Category</label>
-        <select id='category' type="text" class="form-control">
+        <select ngModel name="category" id='category' type="text" class="form-control">
             <option>Select a Category</option>
             <option *ngFor="let c of categories$ | async" [value]="c.key">
                 {{ c.name }}
@@ -21,7 +22,7 @@
     </div>
     <div class="form-group">
         <label for='imageUrl' for="">Image Url</label>
-        <input id='imageUrl' type="text" class="form-control">
+        <input ngModel name="imageUrl" id='imageUrl' type="text" class="form-control">
     </div>
     <button class="btn btn-primary">Save</button>
 </form>
