--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -2,27 +2,31 @@
     <div class="form-group">
         <label for='title' for="">Title</label>
         <input #title="ngModel" ngModel name="title" id='title' type="text" class="form-control" required>
+        <div *ngIf="title.touched && title.invalid" class="alert alert-danger"> Title is required.</div>
     </div>
-    <div *ngIf="title.touched && title.invalid" class="alert alert-danger"> Title is Required.</div>
+
     <div class="form-group">
         <label for='price' for="">Price</label>
 
-        <input ngModel name="price" id='price' type="number" class="form-control">
+        <input #price="ngModel" ngModel name="price" id='price' type="number" class="form-control" required>
+        <div *ngIf="price.touched && price.invalid" class="alert alert-danger">Price is required.</div>
 
 
     </div>
     <div class="form-group">
         <label for='category' for="">Category</label>
-        <select ngModel name="category" id='category' type="text" class="form-control">
+        <select #category="ngModel" ngModel name="category" id='category' type="text" class="form-control" required>
             <option>Select a Category</option>
             <option *ngFor="let c of categories$ | async" [value]="c.key">
                 {{ c.name }}
             </option>
         </select>
+        <div *ngIf="category.touched && category.invalid" class="alert alert-danger">Category is required.</div>
     </div>
     <div class="form-group">
         <label for='imageUrl' for="">Image Url</label>
-        <input ngModel name="imageUrl" id='imageUrl' type="text" class="form-control">
+        <input #imageUrl="ngModel" ngModel name="imageUrl" id='imageUrl' type="text" class="form-control" required>
+        <div *ngIf="imageUrl.touched && imageUrl.invalid" class="alert alert-danger">ImageUrl is required.</div>
     </div>
     <button class="btn btn-primary">Save</button>
 </form>
