--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,32 +1,70 @@
-<form #f="ngForm" (ngSubmit)="save(f.value)">
-    <div class="form-group">
-        <label for='title' for="">Title</label>
-        <input #title="ngModel" ngModel name="title" id='title' type="text" class="form-control" required>
-        <div *ngIf="title.touched && title.invalid" class="alert alert-danger"> Title is required.</div>
-    </div>
+<div class="row">
+    <div class="col-md-6">
+        <form #f="ngForm" (ngSubmit)="save(f.value)">
+            <div class="form-group">
+                <label for='title' for="">Title</label>
+                <input #title="ngModel" ngModel name="title" id='title' type="text" class="form-control" minlength="4" required>
+                <div *ngIf="title.touched && title.invalid" class="alert alert-danger">
+                    <div *ngIf="title.errors.required"> Title is Required.</div>
+                    <div *ngIf="title.errors.minlength"> Title must be at least 5 characters long.</div>
+                </div>
+            </div>
 
-    <div class="form-group">
-        <label for='price' for="">Price</label>
+            <div class="form-group">
+                <label for='price' for="">Price</label>
 
-        <input #price="ngModel" ngModel name="price" id='price' type="number" class="form-control" required>
-        <div *ngIf="price.touched && price.invalid" class="alert alert-danger">Price is required.</div>
+                <input #price="ngModel" ngModel name="price" id='price' type="number" class="form-control" required [min]="0">
+                <div *ngIf="price.touched && price.invalid" class="alert alert-danger">
+                    <div *ngIf="price.errors.required">Price is required.</div>
+                    <div *ngIf="price.errors.min">Price must be a positive number.</div>
+                </div>
 
 
+            </div>
+            <div class="form-group">
+                <label for='category' for="">Category</label>
+                <select #category="ngModel" ngModel name="category" id='category' type="text" class="form-control" required>
+                    <option>Select a Category</option>
+                    <option *ngFor="let c of categories$ | async" [value]="c.key">
+                        {{ c.name }}
+                    </option>
+                </select>
+                <div *ngIf="category.touched && category.invalid" class="alert alert-danger">Category is required.</div>
+            </div>
+            <div class="form-group">
+                <label for='imageUrl' for="">Image Url</label>
+                <input #imageUrl="ngModel" ngModel name="imageUrl" id='imageUrl' type="text" class="form-control" required url>
+                <div *ngIf="imageUrl.touched && imageUrl.invalid" class="alert alert-danger">
+                    <div *ngIf="imageUrl.errors.required">Image Url is required.</div>
+                    <div *ngIf="imageUrl.errors.url">Must be a valid Url.</div>
+                </div>
+            </div>
+            <button class="btn btn-primary">Save</button>
+        </form>
     </div>
-    <div class="form-group">
-        <label for='category' for="">Category</label>
-        <select #category="ngModel" ngModel name="category" id='category' type="text" class="form-control" required>
-            <option>Select a Category</option>
-            <option *ngFor="let c of categories$ | async" [value]="c.key">
-                {{ c.name }}
-            </option>
-        </select>
-        <div *ngIf="category.touched && category.invalid" class="alert alert-danger">Category is required.</div>
-    </div>
-    <div class="form-group">
-        <label for='imageUrl' for="">Image Url</label>
-        <input #imageUrl="ngModel" ngModel name="imageUrl" id='imageUrl' type="text" class="form-control" required>
-        <div *ngIf="imageUrl.touched && imageUrl.invalid" class="alert alert-danger">ImageUrl is required.</div>
-    </div>
-    <button class="btn btn-primary">Save</button>
-</form>
+</div>
+<br>
+
+<!-- Card -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="col-md-6 card promoting-card">
+
+                <!-- Card content -->
+                <div class="col-md-6 card-body d-flex flex-row">
+
+                    <!-- Avatar -->
+                    <!-- <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.jpg" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar"> -->
+
+                    <!-- Content -->
+                    <div>
+
+                        <!-- Title -->
+                        <h4 class="card-title font-weight-bold mb-2">{{title.value | titlecase}}</h4>
+                        <!-- Subtitle -->
+                        <p class="card-text ">{{price.value | currency:'USD':true }}</p>
+
+                    </div>
+
+                </div>
