--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,1 +1,21 @@
 <a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>Price</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let p of products$ | async">
+            <td>{{p.payload.val().title}}</td>
+            <td>{{p.payload.val().price}}</td>
+            <td>
+                <a #routerLink name="routerLink" [routerLink]="['admin/products/', p.key]">Edit</a>
+                <p>{{routerLink}}</p>
+            </td>
+        </tr>
+    </tbody>
+</table>
