--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,9 +1,12 @@
 <div class="row">
+
     <div class="col-md-6">
+        <!-- form -->
+
         <form #f="ngForm" (ngSubmit)="save(f.value)">
             <div class="form-group">
                 <label for='title' for="">Title</label>
-                <input #title="ngModel" ngModel name="title" id='title' type="text" class="form-control" minlength="4" required>
+                <input #title="ngModel" [(ngModel)]="product.title" name="title" id='title' type="text" class="form-control" minlength="4" required>
                 <div *ngIf="title.touched && title.invalid" class="alert alert-danger">
                     <div *ngIf="title.errors.required"> Title is Required.</div>
                     <div *ngIf="title.errors.minlength"> Title must be at least 5 characters long.</div>
@@ -13,7 +16,7 @@
             <div class="form-group">
                 <label for='price' for="">Price</label>
 
-                <input #price="ngModel" ngModel name="price" id='price' type="number" class="form-control" required [min]="0">
+                <input #price="ngModel" [(ngModel)]="product.price" name="price" id='price' type="number" class="form-control" required [min]="0">
                 <div *ngIf="price.touched && price.invalid" class="alert alert-danger">
                     <div *ngIf="price.errors.required">Price is required.</div>
                     <div *ngIf="price.errors.min">Price must be a positive number.</div>
@@ -33,7 +36,7 @@
             </div>
             <div class="form-group">
                 <label for='imageUrl' for="">Image Url</label>
-                <input #imageUrl="ngModel" ngModel name="imageUrl" id='imageUrl' type="text" class="form-control" required url>
+                <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" id='imageUrl' type="text" class="form-control" required url>
                 <div *ngIf="imageUrl.touched && imageUrl.invalid" class="alert alert-danger">
                     <div *ngIf="imageUrl.errors.required">Image Url is required.</div>
                     <div *ngIf="imageUrl.errors.url">Must be a valid Url.</div>
@@ -41,30 +44,20 @@
             </div>
             <button class="btn btn-primary">Save</button>
         </form>
+
     </div>
+    <!-- card -->
+    <div class="col-md-6">
+
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" [src]="imageUrl.value" alt="{{title.value}}">
+            <div class="card-body">
+                <h5 class="card-title">{{product.title}}</h5>
+                <p class="card-text">{{product.price | currency:"USD":true}}</p>
+                <p class="card-text">{{product.category}}</p>
+            </div>
+        </div>
+
+    </div>
+
 </div>
-<br>
-
-<!-- Card -->
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="col-md-6 card promoting-card">
-
-                <!-- Card content -->
-                <div class="col-md-6 card-body d-flex flex-row">
-
-                    <!-- Avatar -->
-                    <!-- <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.jpg" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar"> -->
-
-                    <!-- Content -->
-                    <div>
-
-                        <!-- Title -->
-                        <h4 class="card-title font-weight-bold mb-2">{{title.value | titlecase}}</h4>
-                        <!-- Subtitle -->
-                        <p class="card-text ">{{price.value | currency:'USD':true }}</p>
-
-                    </div>
-
-                </div>
