products page populating again with categories drop down working

--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -12,8 +12,8 @@
     </thead>
     <tbody>
         <tr *ngFor="let p of products$ | async">
-            <td>{{p.title}}</td>
-            <td>{{p.price}}</td>
+            <td>{{p.payload.val().title}}</td>
+            <td>{{p.payload.val().price}}</td>
             <td></td>
         </tr>
     </tbody>
