--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -54,8 +54,8 @@
                 <!-- Card content -->
                 <div class="col-md-6 card-body d-flex flex-row">
 
-                    <!-- Avatar -->
-                    <img [src]="imageUrl.value" class="rounded-circle mr-3">
+                    <!-- Image -->
+                    <img [src]="imageUrl.value" class="img-card-top">
 
                     <!-- Content -->
                     <div>
