--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -13,8 +13,10 @@
     <tbody>
         <tr *ngFor="let p of products$ | async">
             <td>{{p.payload.val().title}}</td>
-            <td>{{p.payload.val().price}}</td>
-            <td></td>
+            <td>{{p.payload.val().price |currency:"USD":true}}</td>
+            <td>
+                <a [routerLink]="['/admin/products/', p.key]">Edit</a>
+            </td>
         </tr>
     </tbody>
 </table>
