--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -13,7 +13,7 @@
             <div class="form-group">
                 <label for='price' for="">Price</label>
 
-                <input #price="ngModel" ngModel name="price" id='price' type="number" class="form-control" required [min]="0">
+                <input #price="ngModel" ngModel name="price" id='price' type="number" class="form-control" required [min]="1">
                 <div *ngIf="price.touched && price.invalid" class="alert alert-danger">
                     <div *ngIf="price.errors.required">Price is required.</div>
                     <div *ngIf="price.errors.min">Price must be a positive number.</div>
@@ -33,13 +33,13 @@
             </div>
             <div class="form-group">
                 <label for='imageUrl' for="">Image Url</label>
-                <input #imageUrl="ngModel" ngModel name="imageUrl" id='imageUrl' type="text" class="form-control" required>
+                <input #imageUrl="ngModel" ngModel name="imageUrl" id='imageUrl' type="text" class="form-control" required url>
                 <div *ngIf="imageUrl.touched && imageUrl.invalid" class="alert alert-danger">
                     <div *ngIf="imageUrl.errors.required">Image Url is required.</div>
                     <div *ngIf="imageUrl.errors.url">Must be a valid Url.</div>
                 </div>
             </div>
-            <button class="btn btn-primary">Save</button>
+            <button class="btn btn-primary" [disabled]="!f.valid">Save</button>
         </form>
     </div>
 </div>
