--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -13,7 +13,7 @@
     <tbody>
         <tr *ngFor="let p of products$ | async">
             <td>{{p.payload.val().title}}</td>
-            <td>{{p.payload.val().price |currency:"USD":true}}</td>
+            <td>{{p.payload.val().price |currency:"USD":"symbol"}}</td>
             <td>
                 <a [routerLink]="['/admin/products/', p.key]">Edit</a>
             </td>
