--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -3,7 +3,7 @@
         <form #f="ngForm" (ngSubmit)="save(f.value)">
             <div class="form-group">
                 <label for='title' for="">Title</label>
-                <input #title="ngModel" ngModel name="title" id='title' type="text" class="form-control" minlength="4" required>
+                <input #title="ngModel" [(ngModel)]="product" name="title" id="title" type="text" class="form-control" required>
                 <div *ngIf="title.touched && title.invalid" class="alert alert-danger">
                     <div *ngIf="title.errors.required"> Title is Required.</div>
                     <div *ngIf="title.errors.minlength"> Title must be at least 5 characters long.</div>
